Fix schedule overflow issue

--- a/intranet/static/css/eighth.schedule.css
+++ b/intranet/static/css/eighth.schedule.css
@@ -14,6 +14,10 @@ tr.scheduled .block-name {
     overflow-x: scroll;
 }
 
+.footer-buttons {
+    margin-bottom: 160px;
+}
+
 @media (min-width: 500px) {
     .header, .nav {
         position: fixed;
